--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ HW-2/airflow/logs/
 HW-2/airflow/dags/__pycache__/
 HW-3/airflow/logs/
 HW-3/airflow/dags/__pycache__/
+HW-4/airflow/logs/
+HW-4/airflow/dags/__pycache__/
